Fix required frame bug in APNGs

If frame |i|'s disposal method is kDisposeOverwritePrevious, frame
|i+1| does not necessarily share |i|'s required frame. If |i| is
independent (e.g. by filling the screen and being opaque or using
kBlendAtopBgcolor), |i+1| may still depend on |i-1|.

When looking for the required frame, skip over frames marked
kDisposeOverwritePrevious. This fixes a bug where frames are drawn on
top of transparent instead of the appropriate prior frame.

Add a LayoutTest that exercises the problem.

BUG=722072

Review-Url: https://codereview.chromium.org/2887123003
Cr-Commit-Position: refs/heads/master@{#472897}

Former-commit-id: 55b2599c12a1f482bf13f07f855f6caf643af390